# LLM-Training-Efficiency-Benchmark

./: .gitignore  README.md  pyproject.toml  start_benchmark_single_gpu_sweep.sh
configs/: baseline_single_gpu_config.yaml
results/attn_sweep/: attention_sweep.json
results/profiles/fp16_attn-eager/: config.json  memory_timeline.skipped  top_cuda_ops.txt  top_memory_ops.txt
results/single_gpu_sweep/: aggregate_results_table.md  bf16_attn-eager.json  fp16_attn-eager.json  fp16_ckpt-full_attn-eager.json  fp16_compiled_attn-eager.json  fp16_compiled_ckpt-full_attn-eager.json  fp16_compiled_ckpt-selective_attn-eager.json  fp32_attn-eager.json  fp32_attn-eager_customlayers.json  fp32_ckpt-full_attn-eager.json  fp32_compiled_attn-eager.json  fp32_compiled_attn-eager_customlayers.json
src/: aggregate_single_gpu_results.py  attention_sweep.py  bench_single_gpu.py  config.py  model.py  run_profiler.py  utils.py
