[project]
name = "llm-training-bench"
version = "0.1.0"
description = "Benchmarks of LLM training techniques (mixed precision, activation checkpointing, attention backends, DDP/FSDP) on single- and multi-GPU."
requires-python = "~=3.12.0"
dependencies = [
    "torch>=2.3",
    "einops>=0.7",
    "pyrallis>=0.3.1",
    "numpy>=1.24",
    "pandas>=2.3.3",
    "matplotlib>=3.10.9",
]
